work around performance bugs

--- a/dbux-graph-client/src/ddg/styles.css
+++ b/dbux-graph-client/src/ddg/styles.css
@@ -44,7 +44,7 @@ svg.jtk-connector path {
  * ############################################################################*/
 
 .timeline-view {
-  height: calc(100vh - 30px);
+  /* height: calc(100vh - 30px); */
 }
 
 .timeline-group {
