--- a/docs_site/src/css/custom.css
+++ b/docs_site/src/css/custom.css
@@ -14,6 +14,9 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
+  
+  /* custom navbar height */
+  --ifm-navbar-height: 40px;
 }
 
 .docusaurus-highlight-code-line {
@@ -319,7 +322,7 @@ pre {
  * ############################################################################*/
 
 .navbar {
-  height: 40px;
+  /* height: 40px; */
   padding-top: 0;
   padding-bottom: 4px;
 }
