--- a/dbux-graph-client/src/graph/styles.css
+++ b/dbux-graph-client/src/graph/styles.css
@@ -400,7 +400,7 @@ div {
 }
 
 .theme-mode-dark .value-label {
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.25);
 }
 
 .hide-values .value-label {
@@ -725,8 +725,14 @@ body:not(.theme-mode-dark) .highlight {
  * screenShotMode
  * ############################################################################*/
 
-.theme-mode-dark .screenshot-mode .async-context-label,.loc-label,.context-node {
-  color: #333;
+ .theme-mode-dark .screenshot-mode .async-context-label,
+.loc-label,
+.context-node {
+  color: #333 !important;
+}
+
+.theme-mode-dark .screenshot-mode .loc-label {
+  color: #333 !important;
 }
 
 .theme-mode-dark .screenshot-mode
